
 Summary
 =======
 
   Version 0.48
   Version 0.47
   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.48
 ============

 Released on 

 New features and improvements:

   - ofaITreeviewColumn: add Type column for display selection.

 Bug fixes:

   - ofaBat: fix setting imported id on import (todo #795).
   - ofaGuidedInput: fix fields reset after validation (todo #973). 
   - ofaReconciliationPage: does not try to associate a batline to a deleted entry.
   - ofaReconciliationPage: improve concililation groups management (todo #976).
   - ofaReconciliationPage: fix concililation/unconciliation operations (todo #977).
   - ofoAccount: fix ofo_account_get_by_number() assertion (todo #972).
   - ofoEntry: remove warning on conciliation delete.

 Other changes:

   - ofa_iconcil_get_instance_id(): new method.
   - ofa_iconcil_get_instance_type(): new method.
   - ofo_concil_for_each_member: new method.

-----------------------------------------------------------------------
 Version 0.47
 ============

 Released on 2016-02-01

 New features and improvements:

   - ofaNomodalPage: new window class to be able to detach the theme pages.
   - ofaOpeTemplateHelp: uses myIDialog interface, is globally unique.

 Bug fixes:

   - ofaOpeTemplateProperties::on_account_selection(): cast to MY_IDIALOG.

 Other changes:

   - my_idialog_present(): returns the actually shown instance.
   - myIDialog::idialog_get_identifier(): defaults to implementation type name.
   - myTabLabel: have a new 'detach' button on the tab.
   - ofaAccountChartBin: remove obsoleted class.

-----------------------------------------------------------------------
 Version 0.46
 ============

 Released on 2016-01-28

 New features and improvements:
