@@ -468,7 +468,19 @@
  974 2016- 2- 3 PWI  add the end date to the credit remboursements template
                      notes + update Exercice 2015.0.ods
 
- 978
+ 978 2016- 2-11 BUG ReconciliationPage: does not keep the from effect
+                    dates filter
+
+ 979 2016- 2-11 BUG Bat files page: unused count is not updated
+
+ 980 2016- 2-11 Render pages are not expected to dynamically auto-update
+                from the hub signaling system - so should let the user
+                'render' as as often as he wants
+
+ 981 2016- 2-11 DBModel remediation dialog: have a right margin with take
+                into account the veertical slider
+
+ 983
 
 -----------------------------------------------------------------------
  DONE
@@ -705,6 +717,9 @@
  977 2016- 2- 4 BUG ReconciliationPage: when conciliating two batlines
                     (see trash/bug977)
      2016- 2-10 fixed
+
+ 982 2016- 2-11 BUG asking for entries export actually exports accounts
+     2016- 2-11 fixed
 
 -----------------------------------------------------------------------
  P. Wieser - Created on 2014, may 2nd
