@@ -26,16 +26,17 @@
 
  New features and improvements:
 
-   - ofaITreeviewColumn: add Type column for display selection.
+   - ofaITreeviewColumn: add ofaIConcil 'Type' column for display selection.
 
  Bug fixes:
 
-   - ofaBat: fix setting imported id on import (todo #795).
+   - ofaExportAssistant: fix type selection (todo #982).
    - ofaGuidedInput: fix fields reset after validation (todo #973). 
    - ofaReconciliationPage: does not try to associate a batline to a deleted entry.
    - ofaReconciliationPage: improve concililation groups management (todo #976).
    - ofaReconciliationPage: fix concililation/unconciliation operations (todo #977).
    - ofoAccount: fix ofo_account_get_by_number() assertion (todo #972).
+   - ofoBat: fix setting imported identifier on import (todo #795).
    - ofoEntry: remove warning on conciliation delete.
 
  Other changes:
